styled. should change later. still need to fix clicking problems (buttondown gets stuck if you click on the border of a cell).

--- a/styles.css
+++ b/styles.css
@@ -19,21 +19,29 @@ body {
 
 .cell {
 	background-color: white;
-	border: .05vmin solid black;
+	border: .01vmin dotted #87CEFA;
 }
 
-#restartButton{
-	/* display: inline-block; */
-	/* box-sizing: border-box; */
-	/* justify-content: flex-start; */
-	font-size: 1rem;
-	background-color: white;
-	border: 1px solid black;
-	padding: .25em 5em;
-	cursor: pointer;
+.cell:hover {
+	background-color: #DCDCDC;
 }
 
-#restartButton:hover{
+.topnav {
+	background-color: #333;
+	overflow: hidden;
+}
+
+.topnav a{
+float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.topnav a:hover{
 	background-color: black;
 	color: white;
 	border-color: white;
